base.css
/* resets */
body {
    font-family: "Gill Sans";
    font-size: 22px;
    margin: 0;
    padding: 0;
    letter-spacing: .3em;
}
h1, h2, h3, h4 ,h5, h6, p {
    margin: .5em 1em;
    padding: 0;
}
h1 {
    font-family: "Open Sans", sans-serif;
    letter-spacing: .2em;
    text-transform: uppercase;
    font-size: 1.5em;
    padding-top: .25em;
}
h2 {
    font-size: 1.25em;
}
dl {
    margin: 0;
    padding: .5em 1em;
}
dd, ul {
    margin: 0;
    padding: 0;
}

h2, h3, h4, h5, h6, .nav, .nav .offscreen {
    font-family: "Open Sans", sans-serif;
    letter-spacing: 0;
    text-transform: uppercase;
}
.l-b { font-size: .9em; position:relative; top: .1em;}
.l-dot { font-size: 1.3em; position:relative; top: -.05em;   }
.l-r {  font-size: 1.1em; position:relative; top: .05em;   }
.l-dot2 { font-size: .8em; position:relative; top: -.1em;    }
.l-g { font-size: 1.3em; position:relative; top: .1em; }
.l-i { font-size: 1.2em; position:relative; top: -.1em;     }
.l-b2 { font-size: 1.3em; position:relative; top: .1em;  }
.l-s { font-size: .7em; position:relative; top: 0em;    }
.l-o { font-size: 1em; position:relative; top: .2em;    }
.l-n { font-size: .8em; position:relative; top: 0em;    }
ul li {
    display: inline-block;
}
p {
    line-height: 140%;
    text-align: justify;
}

.ad-container {
    text-align: center;
    margin: 1em 0;
}
.adsbygoogle {
    margin: 0 auto;
}

/* Re-usable */
.hidden {
    visibility: hidden;
}
.no-transition {
    -moz-transition: none !important;
    -o-transition: none !important;
    -webkit-transition: none !important;
    transition: none !important;
}

.offscreen {
    visibility: hidden;
    opacity: 0;
    width: 0;
    height: 0;
    overflow: hidden;
    position: absolute;
}

.button {
    display: inline-block;
    padding: .5em 1em;
    margin-bottom: 0;
    font-size: 1em;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -ms-touch-action: manipulation;
    touch-action: manipulation;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-image: none;
    border: 1px solid transparent;
    border-radius: .5em;
}

/* begin css */

/* headers */
h1 {
    text-align: center;
}

/* links */
a {
    transition: color .1s;
    color: inherit;
    text-decoration: none;
    display: inline-block;
    padding: 1em; /* matches padding of placeholder sudo element */
}

/* main section */
.main ol {
     counter-reset: item;
}
.main ol li {
  list-style: none;
}
.main ol li:before {
    content: counter(item) ". ";
    counter-increment: item;
    margin-right: .25em;
}
/*.main,*/
/*.main ol li:before {*/
    /*text-shadow:*/
    /*-1px -1px 0 #4E4D87,*/
    /*1px -1px 0 #595790,*/
    /*-1px 1px 0 #4E4D87,*/
    /*1px 1px 0 #595790;*/
/*}*/

/* nav */
.nav {
    position: fixed;
    text-align: left;
    width: 100%;
    z-index: 1;
}
.nav li {
    width: 14.25%;
    text-align: center;
}
.nav a {
    padding: 1em 0;
    width: 100%
}
.nav + *::before,
.nav + .main::before {
    content: '';
    display: block;
    padding-bottom: 3em;
}
.nav .current {
    transition: color 1s;
}
.nav .menu-collapsed {
    display: none;
}

/* nav icon effects */
@keyframes camera-flash {
    0%   {opacity: 0;}
    90%  {opacity: 0;}
    95%  {opacity: 1;}
    100% {opacity: 0;}
}
.nav .icon-camera-retro {
    position: relative;
}
.nav .icon-camera-retro::after {
    animation-name: camera-flash;
    animation-duration: 5s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    opacity: 0;
    position: absolute;
    display: block;
    left: 2.1em;
    top: 1.7em;
    font-size: .5em;
    width: .3em;
    height: .3em;
    content: '★';
}

/* games */
.games a.wrapper {
    display: block;
    text-decoration: none;
    border: solid;
    border-radius: .6em;

}
.games a {
    margin: 1em;
}
.games p {
    padding: .5em 1em;
}

/* homepage */
.experiments .main {
    margin: 0 auto;
    max-width: 32em;
}
.experiments .experiment-links {
    text-align: center;
}
.experiments .experiment-links li {
    display: block;
}
.experiments .photo { /*still used on the about page */
    display: block; /* fixes the pixels of whitespace below the photo */
    width: 100%;
}

/* blog */
.blog .main {
    margin: 0 auto;
    max-width: 42em;
    letter-spacing: 0.05em;
}

/* studio pages */
.rp-300 .main ol {
    counter-reset: initial;
}
.rp-300 {
    counter-reset: item;
}

/* music library and shows pages */
.music-library .quick-links,
.shows .quick-links {
    text-align: center;
}
.music-library .quick-links ol,
.shows .quick-links ol {
    padding: 0;
}
.music-library .quick-links li,
.shows .quick-links li {
    display: inline;
}
.music-library .content ol,
.shows .content ol {
    border-bottom: solid;
    padding-bottom: 2em;
    white-space: nowrap;
    overflow: hidden;
}
.music-library .content li,
.shows .content li {
    display: block;
}
.music-library h1,
.shows h1 {
    padding-top: 0;
    border-bottom: solid;
}
.music-library .title-container {
    text-align: center;
}
.music-library h2 {
    display: inline;
}
.music-library .content a {
    float: right;
}
.music-library r { /* 'r' html tag representing artist */
    padding-right: 2em;
}

/* movies */
.movieviewer {
    text-align: center;
}
.movieviewer iframe {
    width: 13.5em;
    height: 12em;
    padding: .3em;
}

/* music */
.musicviewer {
    margin-top: -1em;
    text-align: center;
}
.musicviewer iframe {
    width: 20em;
    height: 18em;
    border: none;
}
.musicviewer > * {
    display: inline-block;
    width: 22em;
    padding: 0 .6em;
}
@media (max-width:32em) {
    .musicviewer > *,
    .musicviewer iframe {
        width: 90%;
    }
}

/* photos */
.photoviewer {
    text-align: center;
}
.photoviewer img {
    width: 430px;
    padding: .3em;
}
@media (max-width:450px) {
    .photoviewer img {
        width: 95%;
    }
}

/* spotify */
.spotify .main {
    margin: 0 auto;
    max-width: 50em;
}
.spotify .main ol li {
    display: list-item;
    line-height: 150%;
    padding: 0.313em 0;
}
.spotify .playlist-image {
    float: right;
}
.spotify .playlist-container {
    margin: 1em;
}
.spotify .artist-name {
    display: inline-block;
    width: 39%;
}
.spotify .track-name {
    display: inline-block;
    width: 590%;
}
.spotify .login-button {
    display: block;
    margin: 1em auto;
}

/* band-home */
.band-home .main {
    margin: 0 auto;
    max-width: 32em;
}
.band-home .facebook-post {
    text-align: center;
}
.band-home .album {
    margin: 1em auto;
    padding: 1em 0;
}
.band-home .album:after {
    display: block;
    content: "";
    clear: both;
}
.band-home .photo {
    border: 1px solid white;
    display: inline-block;
    float: left;
    width: 50%;
}
.band-home .hero-img-container {
    width: 100%;
    height: 100vh;
    min-height: 9em;
}
.band-home .logo {
    font-size: 2em;
    padding-top: 10%;
    padding-left: 15%;
    text-align: left;
    text-transform: none;
}

.band-home .tracklist {
    display: inline-block;
    line-height: 1.5em;
    margin: 1em auto;
    vertical-align: top;
    width: 14em;
}
@media (max-width:50em) {
    .band-home .photo {
        display: block;
        float: none;
        margin: 0 auto;
        width: 90%;
    }
    .band-home .tracklist {
        margin-top: 2em;
        margin-bottom: 0;
        display: block;
    }
}
.band-home h2 {
    text-align: center;
}

/* colors */
html {
    background: #0f0306;
    color: white;
}
html .band-home {
    color: #0f0306;
}
.band-home .main-wrapper {
    background: white;
}
.see-through-container {
    width: 100%;
    height: 100vh;
    opacity: 0;
}
.bkg-img-container {
    position: fixed;
    top: -50%;
    left: -50%;
    width: 200%;
    height: 200%;
    z-index: -1;
}
.bkg-img-container .bkg-img {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    width: 100vw;
}
@media screen and (orientation:portrait) {
    .bkg-img-container .bkg-img {
            width: auto;
            height: 100vh;
    }
}
@media (max-width:63em) {
    .band-home .logo {
        padding: 1.25em 0;
        text-align: center;
    }
}
.band-home .photo-slice-section {
    background-size: cover;
    color: white;
    padding: 3em 0 1em;
}
.band-home .photo-slice-section h2 {
    padding: 0;
}
.band-home .photo-slice-section .main {
    padding-top: 1em;
}

.band-home .a-winters-tale {
    background-image:  url(/photos/brgibson/a-winters-tale/a-winters-tale.jpg);
}
.band-home .an-adventure-in-space {
    background-image: url(/photos/brgibson/an-adventure-in-space/an-adventure-in-space.jpg);
}
.band-home .for-dad {
    background-image: url(/photos/brgibson/for-dad/for-dad.jpg);
}
.band-home .roads {
    background-image:  url(/photos/brgibson/roads/roads.jpg);
}
.band-home .the-nature-sessions {
    background-image:  url(/photos/brgibson/the-nature-sessions/the-nature-sessions.jpg);
}
@media (max-width:35em) {
    .band-home .hero-img-container {
        height: 100vh;
        width: 100vw;
    }
    .see-through-container {
        height: 50vw;
        width: 100vw;
    }
    .band-home .album {
        margin: 0 auto;
        padding-bottom: 0;
    }
    .band-home .photo-slice-section {
        padding: 1em 0 0;
    }
    .ad-container {
        /*background: #0f0306;*/
        margin: 0 auto;
        padding: 3em 0;
    }
}

h1 {
    color: #FFA5CF;
    text-shadow: none;
}
h2 {
    /*color: #FFA5CF;*/
    text-shadow: none;
}
a:hover, a:focus  {
    /*background: rgb(25, 32, 98);*/
    /*color: #FFA5CF;*/
    /*text-shadow: none;*/
}
.nav .fa-home:hover,
.nav .fa-info-circle:hover,
.nav .fa-music:hover,
.nav .fa-flask:hover,
.nav .fa-bullhorn:hover,
.nav .fa-facebook-square:hover,
.nav .fa-spotify:hover {
    background: rgb(25, 32, 98);
}
.nav .fa-home {
    color: #FFA5CF;
}
.nav .fa-info-circle{
    color: #ff9900;
}
.nav .fa-music {
    color: #ff0051;
}
.nav .fa-flask {
    color: #59e986;
}
.nav .fa-bullhorn {
    color: #3dc1ed;
}
.nav .fa-facebook-square {
    color: #1d53af;
}
.nav .fa-spotify {
    color: #2EBD59;
}

.nav .current {
    background: rgb(25, 32, 98);
    color: #FFA5CF;
}
.nav {
    border-bottom: solid 2px rgb(25, 32, 98);
    background: rgba(15,3,6,.92);
}
.nav,
.nav .menu-expanded,
.nav .icon-camera-retro::after {
    /*background: #0f0306;*/
    color: white;
}

@media (max-width:25em) {
    .nav,
    .nav .menu-expanded,
    .nav .icon-camera-retro::after {
        background: black;
    }
}
.introductions .nav a:hover {
    color: #eee;
}
.games a.wrapper {
    border: solid lightgray;
}
.games a.wrapper:visited {
    color: gray;
}
.games h2 {
    color: lightgray;
}

.music-library .content ol,
.shows .content ol ,
.music-library h1,
.shows h1 {
    border-bottom: lightgray solid;
}


.button {
    background-color: coral;
    color: white;
}
.button:hover {
    background-color: turquoise;
}

